Börjat på basklasser

--- a/Kent Henrik Rymdpiraterna/Kent Henrik Rymdpiraterna/Kent Henrik Rymdpiraterna.csproj
+++ b/Kent Henrik Rymdpiraterna/Kent Henrik Rymdpiraterna/Kent Henrik Rymdpiraterna.csproj
@@ -41,6 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Basklass.cs" />
     <Compile Include="Bullet.cs" />
     <Compile Include="ELAK.cs" />
     <Compile Include="Explosion2.cs" />
